# signal-bags

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: demo_script.md  index.html
scripts/: build_embeddings.py  demo_runner.py  index_bags.py  run_signal.py  serve.py
signalbags/adapters/: bags_client.py  embedder.py  helius_client.py  model_patches.py
signalbags/api/: http.py
signalbags/backends/: bags_tool_backend.py  signal_role_backend.py
signalbags/core/: db.py  narrative.py
signalbags/skills/: query_similar_launches.py
specs/: signal.yaml
specs/roles/: bags_launch_strategist.yaml  bags_launch_strategist_zh.yaml
tests/: test_bags_tool_backend.py  test_model_patches.py
web/: index.html
